Bug 397021 - Subject line <foo@bar> in the forward inline body not shown in html. r=dbienvenu